✨ feat: 后端守卫更改为白名单模式, 黑名单模式有点麻烦

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -28,11 +28,15 @@
     "@nestjs/common": "catalog:",
     "@nestjs/config": "catalog:",
     "@nestjs/core": "catalog:",
+    "@nestjs/jwt": "catalog:",
+    "@nestjs/passport": "catalog:",
     "@nestjs/platform-express": "catalog:",
     "@nestjs/swagger": "catalog:",
     "@prisma/client": "catalog:",
     "bcryptjs": "catalog:",
     "jsonwebtoken": "catalog:",
+    "passport": "catalog:",
+    "passport-jwt": "catalog:",
     "reflect-metadata": "catalog:",
     "rxjs": "catalog:",
     "swagger-ui-express": "catalog:",
