--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -18,6 +18,8 @@ catalogs:
     '@nestjs/common': ^10.4.5
     '@nestjs/config': ^4.0.2
     '@nestjs/core': ^10.4.5
+    '@nestjs/jwt': ^11.0.0
+    '@nestjs/passport': ^11.0.5
     '@nestjs/platform-express': ^10.4.5
     '@nestjs/schematics': ^10.0.0
     '@nestjs/swagger': ^7.4.2
@@ -65,6 +67,8 @@ catalogs:
     next: ^14.2.4
     next-auth: 4.24.11
     next-themes: ^0.4.6
+    passport: ^0.7.0
+    passport-jwt: ^4.0.1
     postcss: ^8.5.6
     prettier: 3.6.2
     prettier-plugin-tailwindcss: ^0.6.14
