✨ feat: 增加对应jsw的校验规则

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -53,6 +53,7 @@
     "@types/jest": "catalog:",
     "@types/jsonwebtoken": "catalog:",
     "@types/node": "catalog:",
+    "@types/passport-jwt": "catalog:",
     "@types/supertest": "catalog:",
     "@types/swagger-ui-express": "catalog:",
     "class-transformer": "catalog:",
