--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -45,6 +45,7 @@ catalogs:
     '@typescript-eslint/eslint-plugin': ^8.0.0
     '@typescript-eslint/parser': ^8.0.0
     '@typescript-eslint/typescript-estree': ^8.0.0
+    '@types/passport-jwt': ^4.0.1
     bcryptjs: ^2.4.3
     chokidar: ^4.0.0
     class-transformer: ^0.5.1
