--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,16 +13,17 @@
     "@hookform/resolvers": "catalog:",
     "@icons-pack/react-simple-icons": "catalog:",
     "@moge/types": "workspace:*",
-    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-avatar": "catalog:",
     "@radix-ui/react-dialog": "catalog:",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-dropdown-menu": "catalog:",
     "@radix-ui/react-label": "catalog:",
-    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-popover": "catalog:",
     "@radix-ui/react-select": "catalog:",
     "@radix-ui/react-separator": "catalog:",
     "@radix-ui/react-slot": "catalog:",
     "@radix-ui/react-tooltip": "catalog:",
     "@tailwindcss/typography": "catalog:",
+    "@uiw/react-md-editor": "catalog:",
     "class-variance-authority": "catalog:",
     "clsx": "catalog:",
     "dayjs": "catalog:",
