--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -25,14 +25,18 @@ catalogs:
     '@nestjs/swagger': ^7.4.2
     '@nestjs/testing': ^10.4.5
     '@prisma/client': 6.15.0
+    '@radix-ui/react-avatar': ^1.1.10
     '@radix-ui/react-dialog': ^1.1.15
+    '@radix-ui/react-dropdown-menu': ^2.1.16
     '@radix-ui/react-label': 2.1.7
+    '@radix-ui/react-popover': ^1.1.15
     '@radix-ui/react-select': ^2.2.6
     '@radix-ui/react-separator': ^1.1.7
     '@radix-ui/react-slot': 1.2.3
     '@radix-ui/react-tooltip': ^1.2.8
     '@tailwindcss/postcss': 4.1.12
     '@tailwindcss/typography': ^0.5.16
+    '@uiw/react-md-editor': ^4.0.8
     '@types/bcryptjs': ^2.4.6
     '@types/express': ^5.0.0
     '@types/jest': ^29.5.12
