✨ feat: 增加AI生成大纲相关逻辑,暂提

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@langchain/core": "catalog:",
+    "@langchain/google-genai": "catalog:",
     "@langchain/openai": "catalog:",
     "@moge/types": "workspace:*",
     "@nestjs/common": "catalog:",
