--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "catalog:",
     "clsx": "catalog:",
     "dayjs": "catalog:",
+    "event-source-polyfill": "catalog:",
     "lucide-react": "catalog:",
     "next": "catalog:",
     "next-auth": "catalog:",
@@ -44,6 +45,7 @@
     "@eslint/eslintrc": "catalog:",
     "@eslint/js": "catalog:",
     "@tailwindcss/postcss": "catalog:",
+    "@types/event-source-polyfill": "catalog:",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
