--- a/apps/backend/.env.development
+++ b/apps/backend/.env.development
@@ -16,3 +16,6 @@ DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USERNAME=postgres
 DATABASE_DATABASE=moge
+
+# Gemini API 密钥
+GEMINI_API_KEY=AIzaSyDOHEkKzeMnd5AXBONsEojUnhpAb2EOX4s
