--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -13,6 +13,7 @@ catalogs:
     '@hookform/resolvers': 5.2.1
     '@icons-pack/react-simple-icons': 13.7.0
     '@langchain/core': 0.3.76
+    '@langchain/google-genai': 0.1.10
     '@langchain/openai': 0.6.12
     '@nestjs/cli': ^10.4.5
     '@nestjs/common': ^10.4.5
@@ -38,6 +39,7 @@ catalogs:
     '@tailwindcss/typography': ^0.5.16
     '@uiw/react-md-editor': ^4.0.8
     '@types/bcryptjs': ^2.4.6
+    '@types/event-source-polyfill': 1.0.5
     '@types/express': ^5.0.0
     '@types/jest': ^29.5.12
     '@types/jsonwebtoken': ^9.0.3
@@ -58,6 +60,7 @@ catalogs:
     clsx: ^2.1.1
     concurrently: ^8.2.2
     dayjs: ^1.11.18
+    'event-source-polyfill': 1.0.31
     eslint: ^9.34.0
     eslint-config-next: 15.5.2
     eslint-config-prettier: 9.1.2
