✨ feat: 增加内容安全敏感词检查

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -41,6 +41,7 @@
     "reflect-metadata": "catalog:",
     "rxjs": "catalog:",
     "swagger-ui-express": "catalog:",
+    "mint-filter": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
