--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -91,6 +91,7 @@ catalogs:
     source-map-support: ^0.5.21
     supertest: ^7.0.0
     swagger-ui-express: ^4.6.3
+    mint-filter: 1.1.2
     tailwind-merge: ^3.3.1
     tailwindcss: ^4.1.12
     ts-jest: ^29.4.1
