--- a/apps/backend/.env.development
+++ b/apps/backend/.env.development
@@ -19,3 +19,6 @@ DATABASE_DATABASE=moge
 
 # Gemini API 密钥
 GEMINI_API_KEY=AIzaSyDOHEkKzeMnd5AXBONsEojUnhpAb2EOX4s
+
+# Moonshot API 密钥 Kimi
+MOONSHOT_API_KEY=sk-JlqFvvV6QKjWfpmBuD8wmoHeDSb4ou2DrerJsOi5Q78bo3vk
