--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,6 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@langchain/community": "catalog:",
     "@langchain/core": "catalog:",
     "@langchain/google-genai": "catalog:",
     "@langchain/openai": "catalog:",
@@ -36,12 +37,12 @@
     "@prisma/client": "catalog:",
     "bcryptjs": "catalog:",
     "jsonwebtoken": "catalog:",
+    "mint-filter": "catalog:",
     "passport": "catalog:",
     "passport-jwt": "catalog:",
     "reflect-metadata": "catalog:",
     "rxjs": "catalog:",
     "swagger-ui-express": "catalog:",
-    "mint-filter": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
