✨ feat: 优化提示词,增加Markdown表格支持

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -36,6 +36,7 @@
     "react-dom": "catalog:",
     "react-hook-form": "catalog:",
     "react-markdown": "catalog:",
+    "remark-gfm": "catalog:",
     "sonner": "catalog:",
     "tailwind-merge": "catalog:",
     "zod": "catalog:",
