--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -87,6 +87,7 @@ catalogs:
     react-dom: ^18.3.1
     react-hook-form: 7.62.0
     react-markdown: 10.1.0
+    remark-gfm: ^4.0.1
     reflect-metadata: ^0.2.2
     rxjs: ^7.8.1
     sonner: ^2.0.7
