--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -28,6 +28,7 @@ catalogs:
     '@nestjs/testing': ^10.4.5
     '@prisma/client': 6.15.0
     '@radix-ui/react-avatar': ^1.1.10
+    '@radix-ui/react-collapsible': ^1.1.12
     '@radix-ui/react-dialog': ^1.1.15
     '@radix-ui/react-dropdown-menu': ^2.1.16
     '@radix-ui/react-label': 2.1.7
