--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -50,6 +50,7 @@ catalogs:
     '@types/react-dom': ^19
     '@types/supertest': ^6.0.2
     '@types/swagger-ui-express': ^4.1.6
+    '@types/minimatch': ^5.1.2
     '@typescript-eslint/eslint-plugin': ^8.0.0
     '@typescript-eslint/parser': ^8.0.0
     '@typescript-eslint/typescript-estree': ^8.0.0
