✨ feat: markdown-parser.service.ts把手动提取改为unified,remark-parse提取

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -35,14 +35,20 @@
     "@nestjs/platform-express": "catalog:",
     "@nestjs/swagger": "catalog:",
     "@prisma/client": "catalog:",
+    "@types/unist": "^3.0.3",
     "bcryptjs": "catalog:",
     "jsonwebtoken": "catalog:",
     "mint-filter": "catalog:",
     "passport": "catalog:",
     "passport-jwt": "catalog:",
     "reflect-metadata": "catalog:",
+    "remark": "^15.0.1",
+    "remark-parse": "^11.0.0",
     "rxjs": "catalog:",
     "swagger-ui-express": "catalog:",
+    "unified": "^11.0.5",
+    "unist-util-is": "^6.0.0",
+    "unist-util-visit-parents": "^6.0.1",
     "zod": "catalog:"
   },
   "devDependencies": {
