✨ feat: 完善设定集相关逻辑

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -63,15 +63,18 @@
     "@types/jsonwebtoken": "catalog:",
     "@types/node": "catalog:",
     "@types/passport-jwt": "catalog:",
+    "@types/pg": "^8.15.5",
     "@types/supertest": "catalog:",
     "@types/swagger-ui-express": "catalog:",
     "class-transformer": "catalog:",
     "class-validator": "catalog:",
+    "dotenv": "^17.2.3",
     "eslint": "catalog:",
     "eslint-config-prettier": "catalog:",
     "eslint-plugin-prettier": "catalog:",
     "globals": "catalog:",
     "jest": "catalog:",
+    "pg": "^8.16.3",
     "prettier": "catalog:",
     "prisma": "catalog:",
     "source-map-support": "catalog:",
