--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,9 @@
     "clean": "rm -rf .next dist"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "catalog:",
     "@icons-pack/react-simple-icons": "catalog:",
     "@moge/types": "workspace:*",
