--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -28,11 +28,13 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "catalog:",
     "@tailwindcss/typography": "catalog:",
+    "@types/lodash": "^4.17.20",
     "@uiw/react-md-editor": "catalog:",
     "class-variance-authority": "catalog:",
     "clsx": "catalog:",
     "dayjs": "catalog:",
     "event-source-polyfill": "catalog:",
+    "lodash": "^4.17.21",
     "lucide-react": "catalog:",
     "next": "catalog:",
     "next-auth": "catalog:",
