--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-collapsible": "catalog:",
     "@radix-ui/react-dialog": "catalog:",
     "@radix-ui/react-dropdown-menu": "catalog:",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "catalog:",
     "@radix-ui/react-popover": "catalog:",
     "@radix-ui/react-select": "catalog:",
