--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -23,6 +23,8 @@
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "catalog:",
     "@radix-ui/react-popover": "catalog:",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "catalog:",
     "@radix-ui/react-separator": "catalog:",
     "@radix-ui/react-slot": "catalog:",
@@ -33,6 +35,7 @@
     "@uiw/react-md-editor": "catalog:",
     "class-variance-authority": "catalog:",
     "clsx": "catalog:",
+    "date-fns": "^4.1.0",
     "dayjs": "catalog:",
     "event-source-polyfill": "catalog:",
     "lodash": "^4.17.21",
