--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -42,6 +42,7 @@
     "lucide-react": "catalog:",
     "next": "catalog:",
     "next-auth": "catalog:",
+    "next-intl": "catalog:",
     "next-themes": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
