--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -78,6 +78,7 @@ catalogs:
     mint-filter: 1.1.2
     next: ^14.2.4
     next-auth: 4.24.11
+    next-intl: ^3.26.5
     next-themes: ^0.4.6
     passport: ^0.7.0
     passport-jwt: ^4.0.1
